# QR_Manager

./: pyproject.toml
qr_maker/: code.py
